Made homepage design and started on first page, Atlas

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -8,12 +8,12 @@
     <title>Me & My Dogs</title>
 </head>
 <body>
-    
+<!--Här börjar är min Header, detta är alltså navigerings menyn ni ser högst upp -->    
 <header>
     <nav class="navbar container flex">
         <h2 class="logo"><a href="#">LOGO</a></h2>
             <ul class="nav-links flex">
-            <li><a href="#Home">Home</a></li>
+            <li><a href="#home">Home</a></li>
             <li><a href="#Atlas">Atlas</a></li>
             <li><a href="#Bonnie">Bonnie</a></li>
             <li><a href="#Mia">Mia</a></li>
@@ -21,6 +21,39 @@
             </ul>
     </nav>
 </header>
+<!--Här slutar är min Header -->  
+
+<!-- Här börjar min Home pages-->
+    <section class="homepage"  id="home">
+        <div class="content flex">
+            <div class="text">
+                <h1> Home Page</h1>
+                <p> text text TEXT TEXT Text Text</p>
+            </div>
+        <a href="Atlas.html">Let's check them out</a>
+        </div>
+    </section>
+<!-- Här avslutas min Home page-->
+
+<!-- Atlas Sida -->
+<section class="services" id="atlas">
+    <div class="container">
+        <div class="section-title">
+            <h2>Atlas</h2>
+            <p> text text TEXT TEXT Text Text</p>
+        </div>
+
+        <ul class="cards flex">
+            <li class="card">
+                <img src="/Styling/Images/Atlas.jpg" alt="Atlas">
+                <h3>Om Atlas</h3>
+                <p> text text TEXT TEXT Text Text</p>
+            </li>
+        </ul>
+
+    </div>
+</section>
+
 
 
 </body>
