added footer, not finished

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -110,6 +110,121 @@
         </div>
     </section>
 
+<!-- ATLAS -->
+<section class="atlas" id="atlas">
+    <div class="atlas__container container grid">
+        <div class="atlas__data">
+            <h2 class="section__title">
+                About Atlas
+            </h2>
+
+            <p class="atlas_description">
+                Här är massa info om Atlas som är super intressant.
+                Han är världens finaste hund om ni inte kan se det.
+            </p>
+
+            <a href="#" class="button">
+                More about him <i class="ri-arrow-right-line"></i>
+            </a>
+        </div>
+        <div class="atlas__image">
+            <img src="/Styling/Images/Atlas.jpg" alt="atlas image" class="atlas__img">
+            <div class="atlas__shadow"></div>
+        </div>
+    </div>
+</section>
+
+<!-- BONNIE -->
+<section class="bonnie" id="bonnie">
+    <h2 class="section__title">
+        Bonnie
+    </h2>
+
+    <div class="bonnie__container container grid">
+        <article class="bonnie__card">
+            <div class="bonnie__image">
+                <img src="/Styling/Images/Bonnie.JPG" alt="bonnie__img">
+            </div>
+        </article>
+    </div>
+</section>
+
+<!-- FOOTER -->
+<footer class="footer">
+    <div class="footer__container container grid">
+        <div class="footer__content grid">
+            <div>
+                <a href="/Styling/Images/thanks.png" class="footer__logo"></a>
+                <h3 class="footer__title">Tack!</h3>
+                <p class="footer__description">Thanks for visiting my website.</p>
+            </div>
+        
+            <div class="footer__data grid">
+
+                <div>
+                    <h3 class="footer__title">Hundarna</h3>
+                    <ul class="footer__links">
+                        <li>
+                            <a href="#" class="footer__link">Atlas</a>
+                        </li>
+
+                        <li>
+                            <a href="#" class="footer__link">Bonnie</a>
+                        </li>
+
+                        <li>
+                            <a href="#" class="footer__link">Mia</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3 class="footer__title">Länkar</h3>
+                    <ul class="footer__links">
+                        <li>
+                            <a href="#" class="footer__link">Facebook</a>
+                        </li>
+
+                        <li>
+                            <a href="#" class="footer__link">Instagram</a>
+                        </li>
+
+                        <li>
+                            <a href="#" class="footer__link">Discord</a>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="footer__group">
+            <div class="footer__social">
+                <a href="" target="_blank" class="footer__social-link">
+                    <i class="ri-instagram-fill"></i>
+                </a>
+
+                <a href="" target="_blank" class="footer__social-link">
+                    <i class="ri-facebook-fill"></i>
+                </a>
+
+                <a href="" target="_blank" class="footer__social-link">
+                    <i class="ri-twitter-x-fill"></i>
+                </a>
+
+                <a href="" target="_blank" class="footer__social-link">
+                    <i class="ri-discord-fill"></i>
+                </a>
+            </div>
+
+            <span class="footer__copy">
+                &#169; If i knew how Copyright worked, it would be displayed here.
+            </span>
+        </div>
+    </div>
+</footer>
+
+
 
 </main>
 
