--- a/Pages/Ann.html
+++ b/Pages/Ann.html
@@ -59,12 +59,12 @@
     
             <div class="about__container">
                 <div class="about__image">
-                   <img src="/Styling/Images/background-me.jpg" alt="about image" class="about__img">
+                   <img src="/Styling/Images/Me-background.jpg" alt="about image" class="about__img">
                    <div class="about__shadow"></div>
                 </div>
 
   <!--==================== ABOUT PACK ====================-->
-  <section class="pack section" id="pack">
+  <section class="pack section" id="about">
     <div class="pack__container container grid">
        <div class="pack__data">
           <h2 class="section__title">Me, Ann</h2>
@@ -80,7 +80,7 @@
        </div>
 
        <div class="pack__image">
-          <img src="/Styling/Images/noPicture.jpg" alt="pack image" class="pack__img">
+          <img src="/Styling/Images/MeAnn.png" alt="pack image" class="pack__img">
           <div class="pack__shadow"></div>
        </div>
     </div>
