fixed section on all pages

--- a/Pages/Ann.html
+++ b/Pages/Ann.html
@@ -25,19 +25,19 @@
               <div class="nav__menu" id="nav-menu">
                  <ul class="nav__list">
                     <li class="nav__item">
-                       <a href="#home" class="nav__link active-link">Home</a>
+                       <a href="/Pages/index.html" class="nav__link active-link">Home</a>
                     </li>
   
                     <li class="nav__item">
-                       <a href="#pack" class="nav__link">The Pack</a>
+                       <a href="/Pages/index.html#pack" class="nav__link">The Pack</a>
                     </li>
   
                     <li class="nav__item">
-                       <a href="/Pages/index.html" class="nav__link">Traits</a>
+                       <a href="/Pages/index.html#traits" class="nav__link">Traits</a>
                     </li>
   
                     <li class="nav__item">
-                       <a href="#about" class="nav__link">About Me</a>
+                       <a href="/Pages/index.html#about" class="nav__link">About Me</a>
                     </li>
                  </ul>
   
@@ -64,14 +64,17 @@
                 </div>
 
   <!--==================== ABOUT PACK ====================-->
-  <section class="pack section" id="about">
+  <section class="about section" id="about">
     <div class="pack__container container grid">
        <div class="pack__data">
           <h2 class="section__title">Me, Ann</h2>
 
           <p class="pack__description">
-             This pack currently contains one old introvertet Cavalier King Charles Spaniel/Chihuahua mix
-             and a young Siberian Husky who recently got a little Siberian Husky puppy sister.
+             This is me, Ann. I don't know what to write here. I
+             hate describing myself. So I'll just let you know
+             that this picutre of me was taken on Iceland last
+             year. A bucket-list trip of mine that I did with three
+             amazing friends of mine.
           </p>
 
           <a href="/Pages/index.html" class="button">
