--- a/Pages/index.html
+++ b/Pages/index.html
@@ -119,9 +119,7 @@
                      and a young Siberian Husky who recently got a little Siberian Husky puppy sister.
                   </p>
 
-                  <a href="/Pages/Ann.html" class="button">
-                     About Me <i class="ri-arrow-right-line"></i>
-                  </a>
+
                </div>
 
                <div class="pack__image">
@@ -191,8 +189,7 @@
                <div class="about__content container grid">
                   <div class="about__data">
                      <h2 class="about__title">
-                        About me <br> 
-                        the creator & dog mom
+                        The Creator & Dog Mom
                      </h2>
    
                      <p class="about__description">
@@ -201,6 +198,11 @@
                         spending time in nature and with animals, the dogs especially. Nothing gives me
                         more peace and joy than to watch them run around in the forest.
                      </p>
+                <br><br> <!-- Jaaaa, jag använde <br> -->
+                     <a href="/Pages/Ann.html" class="button">
+                        More About Me <i class="ri-arrow-right-line"></i>
+                     </a>
+
                   </div>
 
                   <div class="about__user">
