changed index location, test for GitHub Pages

--- a/Pages/Atlas.html
+++ b/Pages/Atlas.html
@@ -25,19 +25,19 @@
               <div class="nav__menu" id="nav-menu">
                  <ul class="nav__list">
                     <li class="nav__item">
-                       <a href="/Pages/index.html" class="nav__link active-link">Home</a>
+                       <a href="/index.html" class="nav__link active-link">Home</a>
                     </li>
   
                     <li class="nav__item">
-                       <a href="/Pages/index.html#pack" class="nav__link">The Pack</a>
+                       <a href="/index.html#pack" class="nav__link">The Pack</a>
                     </li>
   
                     <li class="nav__item">
-                       <a href="/Pages/index.html#traits" class="nav__link">Traits</a>
+                       <a href="/index.html#traits" class="nav__link">Traits</a>
                     </li>
   
                     <li class="nav__item">
-                       <a href="/Pages/index.html#about" class="nav__link">About Me</a>
+                       <a href="/index.html#about" class="nav__link">About Me</a>
                     </li>
                  </ul>
   
@@ -76,7 +76,7 @@
              </p>
 <br><br> <!-- Ja, jag använde <br> även fast du sa att jag inte skulle det :) -->
              <div style="flex-shrink: 0">
-               <a href="/Pages/index.html" class="button">
+               <a href="/index.html" class="button">
                  Back to Home <i class="ri-arrow-right-line"></i>
               </a>
            </div>
