--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- HEADER - START -->
       <header class="header" id="header">
          <nav class="nav container">
-            <a href="/Pages/index.html" class="nav__logo">Me & The Dogs</a>
+            <a href="index.html" class="nav__logo">Me & The Dogs</a>
 
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list">
