--- a/Pages/Ann.html
+++ b/Pages/Ann.html
@@ -25,19 +25,19 @@
               <div class="nav__menu" id="nav-menu">
                  <ul class="nav__list">
                     <li class="nav__item">
-                       <a href="/Pages/index.html" class="nav__link active-link">Home</a>
+                       <a href="/index.html" class="nav__link active-link">Home</a>
                     </li>
   
                     <li class="nav__item">
-                       <a href="/Pages/index.html#pack" class="nav__link">The Pack</a>
+                       <a href="/index.html#pack" class="nav__link">The Pack</a>
                     </li>
   
                     <li class="nav__item">
-                       <a href="/Pages/index.html#traits" class="nav__link">Traits</a>
+                       <a href="/index.html#traits" class="nav__link">Traits</a>
                     </li>
   
                     <li class="nav__item">
-                       <a href="/Pages/index.html#about" class="nav__link">About Me</a>
+                       <a href="/index.html#about" class="nav__link">About Me</a>
                     </li>
                  </ul>
   
@@ -77,7 +77,7 @@
              amazing friends of mine.
           </p>
 
-          <a href="/Pages/index.html" class="button">
+          <a href="/index.html" class="button">
              Back <i class="ri-arrow-right-line"></i>
           </a>
        </div>
