trying to link css for GitHub Pages

--- a/Pages/Ann.html
+++ b/Pages/Ann.html
@@ -5,19 +5,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-        <!--=============== FAVICON ===============-->
-        <link rel="shortcut icon" href="/Styling/Images/paw-favicon.png">
-  
-        <!--=============== REMIXICONS ===============-->
-        <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
-  
-        <!--=============== CSS ===============-->
-        <link rel="stylesheet" href="/Styling/style.css">
+      <!--FAVICON, TASS FRAMFÖR TAB NAMNET-->
+      <link rel="shortcut icon" href="/Styling/Images/paw-favicon.png">
+
+      <!-- IMPORTERADE REMIXICONS, EX FÖR PILAR-->
+      <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+
+      <!-- CSS LÄNK-->
+      <link rel="stylesheet" href="/Styling/style.css">
   
         <title>Me & The Dogs - Ann</title>
      </head>
      <body>
-        <!--==================== HEADER ====================-->
+<!-- HEADER - START -->
         <header class="header" id="header">
            <nav class="nav container">
               <a href="/Pages/Ann.html" class="nav__logo">Ann</a>
@@ -41,20 +41,21 @@
                     </li>
                  </ul>
   
-                 <!-- Close button -->
-                 <div class="nav__close" id="nav-close">
-                    <i class="ri-close-line"></i>
-                 </div>
-              </div>
+               <!-- CLOSE MENU BUTTON - SMALL SCREEN -->
+               <div class="nav__close" id="nav-close">
+                  <i class="ri-close-line"></i>
+               </div>
+            </div>
+
+            <!-- OPEN MENU BUTTOON - SMALL SCREEN -->
+            <div class="nav__toggle" id="nav-toggle">
+               <i class="ri-menu-line"></i>
+            </div>
+         </nav>
+      </header>
+<!-- HEADER - SLUT -->
   
-              <!-- Toggle button -->
-              <div class="nav__toggle" id="nav-toggle">
-                 <i class="ri-menu-line"></i>
-              </div>
-           </nav>
-        </header>
-  
-        <!--==================== MAIN ====================-->
+<!--BACKGRUNDSBILD -->
         <main class="main">
     
             <div class="about__container">
@@ -63,7 +64,7 @@
                    <div class="about__shadow"></div>
                 </div>
 
-  <!--==================== ABOUT PACK ====================-->
+<!--MY PROFILE PAGE - START -->
   <section class="about section" id="about">
     <div class="pack__container container grid">
        <div class="pack__data">
@@ -88,19 +89,9 @@
        </div>
     </div>
  </section>
+<!--MY PROFILE PAGE - SLUT -->
 
-
-
-
-
-
-
-
-
-
-
-    
-  <!--==================== FOOTER ====================-->
+<!-- FOOTER - START -->
   <footer class="footer">
     <div class="footer__container container grid">
        <div class="footer__content grid">
@@ -198,16 +189,15 @@
        </div>
     </div>
  </footer>
+<!-- FOOTER - SLUT -->
 
- <!--========== SCROLL UP ==========-->
- <a href="#" class="scrollup" id="scroll-up">
-    <i class="ri-arrow-up-line"></i>
- </a>
+<!-- SCROLL UP ICON (IMPORTERAD FRN REMIXICONS) -->
+<a href="#" class="scrollup" id="scroll-up">
+   <i class="ri-arrow-up-line"></i>
+</a>
 
- <!--=============== SCROLLREVEAL ===============-->
- <script src="assets/js/scrollreveal.min.js"></script>
 
- <!--=============== MAIN JS ===============-->
- <script src="/JavaScript/myScript.js"></script>
+<!-- JAVASCRIPT LÄNK -->
+<script src="/JavaScript/myScript.js"></script>
 </body>
 </html>
