--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
       <!-- CSS LÄNK-->
-      <link rel="stylesheet" href="/Styling/style.css">
+      <link rel="stylesheet" href="Styling/style.css">
 
       <title>Me & The Dogs</title>
    </head>
@@ -19,7 +19,7 @@
 <!-- HEADER - START -->
       <header class="header" id="header">
          <nav class="nav container">
-            <a href="index.html" class="nav__logo">Me & The Dogs</a>
+            <a href="ndex.html" class="nav__logo">Me & The Dogs</a>
 
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list">
