jag hatar dettaaaa

--- a/Pages/Mia.html
+++ b/Pages/Mia.html
@@ -12,7 +12,7 @@
       <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
       <!-- CSS LÄNK-->
-      <link rel="stylesheet" href="/Styling/style.css">
+      <link rel="stylesheet" href="Styling/style.css">
   
         <title>Me & The Dogs - Mia</title>
      </head>
@@ -200,9 +200,6 @@
  <a href="#" class="scrollup" id="scroll-up">
     <i class="ri-arrow-up-line"></i>
  </a>
-
- <!--=============== SCROLLREVEAL ===============-->
- <script src="assets/js/scrollreveal.min.js"></script>
 
 <!-- JAVASCRIPT LÄNK -->
  <script src="/JavaScript/myScript.js"></script>
