--- a/Pages/Bonnie.html
+++ b/Pages/Bonnie.html
@@ -12,7 +12,7 @@
       <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
       <!-- CSS LÄNK-->
-      <link rel="stylesheet" href="/Styling/style.css">
+      <link rel="stylesheet" href="Styling/style.css">
   
         <title>Me & The Dogs - Bonnie</title>
      </head>
@@ -202,8 +202,6 @@
     <i class="ri-arrow-up-line"></i>
  </a>
 
- <!--=============== SCROLLREVEAL ===============-->
- <script src="assets/js/scrollreveal.min.js"></script>
 
 <!-- JAVASCRIPT LÄNK -->
  <script src="/JavaScript/myScript.js"></script>
