försökte ta bort alla / framför src och href

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                <div class="home__cards grid">
                   <article class="home__card">
-                     <img src="/Styling/Images/Atlas.jpg" alt="home image" class="home__card-img">
+                     <img src="Styling/Images/Atlas.jpg" alt="home image" class="home__card-img">
                      <a href="/Pages/Atlas.html">
                      <h3 class="home__card-title">Atlas</h3>
                     </a>
@@ -86,7 +86,7 @@
                   </article>
 
                   <article class="home__card">
-                     <img src="/Styling/Images/Bonnie.JPG" alt="home image" class="home__card-img">
+                     <img src="Styling/Images/Bonnie.JPG" alt="home image" class="home__card-img">
                      <a href="/Pages/Bonnie.html">
                         <h3 class="home__card-title">Bonnie</h3>
                        </a>
@@ -94,7 +94,7 @@
                   </article>
 
                   <article class="home__card">
-                     <img src="/Styling/Images/Mia.png" alt="home image" class="home__card-img">
+                     <img src="Styling/Images/Mia.png" alt="home image" class="home__card-img">
                      <a href="/Pages/Mia.html">
                         <h3 class="home__card-title">Mia</h3>
                        </a>
@@ -123,7 +123,7 @@
                </div>
 
                <div class="pack__image">
-                  <img src="/Styling/Images/noPicture.jpg" alt="pack image" class="pack__img">
+                  <img src="Styling/Images/noPicture.jpg" alt="pack image" class="pack__img">
                   <div class="pack__shadow"></div>
                </div>
             </div>
@@ -140,7 +140,7 @@
             <div class="traits__container container grid">
                <article class="traits__card">
                   <div class="traits__image">
-                     <img src="/Styling/Images/Atlas3.JPG" alt="traits image" class="traits__img">
+                     <img src="Styling/Images/Atlas3.JPG" alt="traits image" class="traits__img">
                      <div class="traits__shadow"></div>
                   </div>
                   <h2 class="traits__title">Atlas</h2>
@@ -152,7 +152,7 @@
 
                <article class="traits__card">
                   <div class="traits__image">
-                     <img src="/Styling/Images/Bonnie2.JPG" alt="traits image" class="traits__img">
+                     <img src="Styling/Images/Bonnie2.JPG" alt="traits image" class="traits__img">
                      <div class="traits__shadow"></div>
                   </div>
                   <h2 class="traits__title">Bonnie</h2>
@@ -164,7 +164,7 @@
 
                <article class="traits__card">
                   <div class="traits__image">
-                     <img src="/Styling/Images/noPicture.jpg" alt="traits image" class="traits__img">
+                     <img src="Styling/Images/noPicture.jpg" alt="traits image" class="traits__img">
                      <div class="traits__shadow"></div>
                   </div>
                   <h2 class="traits__title">Mia</h2>
@@ -182,7 +182,7 @@
          <section class="about section" id="about">
             <div class="about__container">
                <div class="about__image">
-                  <img src="/Styling/Images/background-me.jpg" alt="about image" class="about__img">
+                  <img src="Styling/Images/background-me.jpg" alt="about image" class="about__img">
                   <div class="about__shadow"></div>
                </div>
 
@@ -206,7 +206,7 @@
                   </div>
 
                   <div class="about__user">
-                     <img src="/Styling/Images/Me.jpg" alt="about image" class="about__perfil">
+                     <img src="Styling/Images/Me.jpg" alt="about image" class="about__perfil">
                      <span class="about__name">Ann "Svinxen" Axelsson</span>
                   </div>
                </div>
