--- a/Pages/Ann.html
+++ b/Pages/Ann.html
@@ -20,24 +20,24 @@
 <!-- HEADER - START -->
         <header class="header" id="header">
            <nav class="nav container">
-              <a href="/Pages/Ann.html" class="nav__logo">Ann</a>
+              <a href="Pages/Ann.html" class="nav__logo">Ann</a>
   
               <div class="nav__menu" id="nav-menu">
                  <ul class="nav__list">
                     <li class="nav__item">
-                       <a href="/index.html" class="nav__link active-link">Home</a>
+                       <a href="index.html" class="nav__link active-link">Home</a>
                     </li>
   
                     <li class="nav__item">
-                       <a href="/index.html#pack" class="nav__link">The Pack</a>
+                       <a href="index.html#pack" class="nav__link">The Pack</a>
                     </li>
   
                     <li class="nav__item">
-                       <a href="/index.html#traits" class="nav__link">Traits</a>
+                       <a href="index.html#traits" class="nav__link">Traits</a>
                     </li>
   
                     <li class="nav__item">
-                       <a href="/index.html#about" class="nav__link">About Me</a>
+                       <a href="index.html#about" class="nav__link">About Me</a>
                     </li>
                  </ul>
   
@@ -60,7 +60,7 @@
     
             <div class="about__container">
                 <div class="about__image">
-                   <img src="/Styling/Images/Me-background.jpg" alt="about image" class="about__img">
+                   <img src="Styling/Images/Me-background.jpg" alt="about image" class="about__img">
                    <div class="about__shadow"></div>
                 </div>
 
@@ -78,13 +78,13 @@
              amazing friends of mine.
           </p>
 
-          <a href="/index.html" class="button">
+          <a href="index.html" class="button">
              Back <i class="ri-arrow-right-line"></i>
           </a>
        </div>
 
        <div class="pack__image">
-          <img src="/Styling/Images/MeAnn.png" alt="pack image" class="pack__img">
+          <img src="Styling/Images/MeAnn.png" alt="pack image" class="pack__img">
           <div class="pack__shadow"></div>
        </div>
     </div>
@@ -111,15 +111,15 @@
 
                 <ul class="footer__links">
                    <li>
-                      <a href="/Pages/Atlas.html" class="footer__link">Atlas</a>
+                      <a href="Pages/Atlas.html" class="footer__link">Atlas</a>
                    </li>
 
                    <li>
-                      <a href="/Pages/Bonnie.html" class="footer__link">Bonnie</a>
+                      <a href="Pages/Bonnie.html" class="footer__link">Bonnie</a>
                    </li>
                    
                    <li>
-                      <a href="/Pages/Mia.html" class="footer__link">Mia</a>
+                      <a href="Pages/Mia.html" class="footer__link">Mia</a>
                    </li>
                 </ul>
              </div>
@@ -147,7 +147,7 @@
 
                 <ul class="footer__links">
                    <li>
-                      <a href="/Pages/Ann.html" class="footer__link">Ann</a>
+                      <a href="Pages/Ann.html" class="footer__link">Ann</a>
                    </li>
 
                    <li>
@@ -198,6 +198,6 @@
 
 
 <!-- JAVASCRIPT LÄNK -->
-<script src="/JavaScript/myScript.js"></script>
+<script src="JavaScript/myScript.js"></script>
 </body>
 </html>
