testar / framför src

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <!--FAVICON, TASS FRAMFÖR TAB NAMNET-->
-      <link rel="shortcut icon" href="/Styling/Images/paw-favicon.png">
+      <link rel="shortcut icon" href="Styling/Images/paw-favicon.png">
 
       <!-- IMPORTERADE REMIXICONS, EX FÖR PILAR-->
       <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
@@ -19,7 +19,7 @@
 <!-- HEADER - START -->
       <header class="header" id="header">
          <nav class="nav container">
-            <a href="ndex.html" class="nav__logo">Me & The Dogs</a>
+            <a href="index.html" class="nav__logo">Me & The Dogs</a>
 
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list">
@@ -79,7 +79,7 @@
                <div class="home__cards grid">
                   <article class="home__card">
                      <img src="Styling/Images/Atlas.jpg" alt="home image" class="home__card-img">
-                     <a href="/Pages/Atlas.html">
+                     <a href="Pages/Atlas.html">
                      <h3 class="home__card-title">Atlas</h3>
                     </a>
                      <div class="home__card-shadow"></div>
@@ -87,7 +87,7 @@
 
                   <article class="home__card">
                      <img src="Styling/Images/Bonnie.JPG" alt="home image" class="home__card-img">
-                     <a href="/Pages/Bonnie.html">
+                     <a href="Pages/Bonnie.html">
                         <h3 class="home__card-title">Bonnie</h3>
                        </a>
                      <div class="home__card-shadow"></div>
@@ -95,7 +95,7 @@
 
                   <article class="home__card">
                      <img src="Styling/Images/Mia.png" alt="home image" class="home__card-img">
-                     <a href="/Pages/Mia.html">
+                     <a href="Pages/Mia.html">
                         <h3 class="home__card-title">Mia</h3>
                        </a>
                      <div class="home__card-shadow"></div>
@@ -199,7 +199,7 @@
                         more peace and joy than to watch them run around in the forest.
                      </p>
                 <br><br> <!-- Jaaaa, jag använde <br> -->
-                     <a href="/Pages/Ann.html" class="button">
+                     <a href="Pages/Ann.html" class="button">
                         More About Me <i class="ri-arrow-right-line"></i>
                      </a>
 
@@ -234,15 +234,15 @@
 
                      <ul class="footer__links">
                         <li>
-                           <a href="/Pages/Atlas.html" class="footer__link">Atlas</a>
+                           <a href="Pages/Atlas.html" class="footer__link">Atlas</a>
                         </li>
 
                         <li>
-                           <a href="/Pages/Bonnie.html" class="footer__link">Bonnie</a>
+                           <a href="Pages/Bonnie.html" class="footer__link">Bonnie</a>
                         </li>
                         
                         <li>
-                           <a href="/Pages/Mia.html" class="footer__link">Mia</a>
+                           <a href="Pages/Mia.html" class="footer__link">Mia</a>
                         </li>
                      </ul>
                   </div>
@@ -270,7 +270,7 @@
 
                      <ul class="footer__links">
                         <li>
-                           <a href="/Pages/Ann.html" class="footer__link">Ann</a>
+                           <a href="Pages/Ann.html" class="footer__link">Ann</a>
                         </li>
 
                         <li>
@@ -324,6 +324,6 @@
       <script src="assets/js/scrollreveal.min.js"></script>
 
 <!-- JAVASCRIPT LÄNK -->
-      <script src="/JavaScript/myScript.js"></script>
+      <script src="JavaScript/myScript.js"></script>
    </body>
 </html>
