trying to re-link css

--- a/Pages/Bonnie.html
+++ b/Pages/Bonnie.html
@@ -12,7 +12,7 @@
       <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
       <!-- CSS LÄNK-->
-      <link rel="stylesheet" href="Styling/style.css">
+      <link rel="stylesheet" href="/Styling/style.css">
   
         <title>Me & The Dogs - Bonnie</title>
      </head>
