--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         more peace and joy than to watch them run around in the forest.
                      </p>
                 <br><br> <!-- Jaaaa, jag använde <br> -->
-                     <a href="Pages/Ann.html" class="button">
+                     <a href="/Pages/Ann.html" class="button">
                         More About Me <i class="ri-arrow-right-line"></i>
                      </a>
 
