--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="traits__container container grid">
                <article class="traits__card">
                   <div class="traits__image">
-                     <img src="Styling/Images/Atlas3.JPG" alt="traits image" class="traits__img">
+                     <img src="Styling/Images/Atlas3.jpg" alt="traits image" class="traits__img">
                      <div class="traits__shadow"></div>
                   </div>
                   <h2 class="traits__title">Atlas</h2>
@@ -199,7 +199,7 @@
                         more peace and joy than to watch them run around in the forest.
                      </p>
                 <br><br> <!-- Jaaaa, jag använde <br> -->
-                     <a href="/Pages/Ann.html" class="button">
+                     <a href="Pages/Ann.html" class="button">
                         More About Me <i class="ri-arrow-right-line"></i>
                      </a>
 
