--- a/Pages/Ann.html
+++ b/Pages/Ann.html
@@ -60,7 +60,7 @@
     
             <div class="about__container">
                 <div class="about__image">
-                   <img src="Styling/Images/Me-background.jpg" alt="about image" class="about__img">
+                   <img src="../Styling/Images/Me-background.jpg" alt="about image" class="about__img">
                    <div class="about__shadow"></div>
                 </div>
 
@@ -84,7 +84,7 @@
        </div>
 
        <div class="pack__image">
-          <img src="Styling/Images/MeAnn.png" alt="pack image" class="pack__img">
+          <img src="../Styling/Images/MeAnn.png" alt="pack image" class="pack__img">
           <div class="pack__shadow"></div>
        </div>
     </div>
@@ -198,6 +198,6 @@
 
 
 <!-- JAVASCRIPT LÄNK -->
-<script src="JavaScript/myScript.js"></script>
+<script src="../JavaScript/myScript.js"></script>
 </body>
 </html>
