--- a/Pages/Atlas.html
+++ b/Pages/Atlas.html
@@ -12,7 +12,7 @@
       <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
       <!-- CSS LÄNK-->
-      <link rel="stylesheet" href="Styling\style.css">
+      <link rel="stylesheet" href="../Styling/style.css">
   
         <title>Me & The Dogs - Atlas</title>
      </head>
@@ -59,7 +59,7 @@
   <section class="about section" id="pack">
     <div class="about__container">
        <div class="about__image">
-          <img src="Styling/Images/Atlas-background.jpg" alt="about image" class="about__img">
+          <img src="../Styling/Images/Atlas-background.jpg" alt="about image" class="about__img">
           <div class="about__shadow"></div>
        </div>
 
@@ -203,6 +203,6 @@
 
 
 <!-- JAVASCRIPT LÄNK -->
- <script src="JavaScript/myScript.js"></script>
+ <script src="../JavaScript/myScript.js"></script>
 </body>
 </html>
