--- a/Pages/Mia.html
+++ b/Pages/Mia.html
@@ -20,24 +20,24 @@
 <!-- HEADER - START -->
         <header class="header" id="header">
            <nav class="nav container">
-              <a href="Pages/Mia.html" class="nav__logo">Mia</a>
+              <a href="Mia.html" class="nav__logo">Mia</a>
   
               <div class="nav__menu" id="nav-menu">
                  <ul class="nav__list">
                     <li class="nav__item">
-                       <a href="index.html" class="nav__link active-link">Home</a>
+                       <a href="../index.html" class="nav__link active-link">Home</a>
                     </li>
   
                     <li class="nav__item">
-                       <a href="index.html#pack" class="nav__link">The Pack</a>
+                       <a href="../index.html#pack" class="nav__link">The Pack</a>
                     </li>
   
                     <li class="nav__item">
-                       <a href="index.html#traits" class="nav__link">Traits</a>
+                       <a href="../index.html#traits" class="nav__link">Traits</a>
                     </li>
   
                     <li class="nav__item">
-                       <a href="index.html#about" class="nav__link">About Me</a>
+                       <a href="../index.html#about" class="nav__link">About Me</a>
                     </li>
                  </ul>
   
@@ -76,7 +76,7 @@
              </p>
 <br><br> <!-- Ja, jag använde <br> även fast du sa att jag inte skulle det :) -->
              <div style="flex-shrink: 0">
-               <a href="index.html" class="button">
+               <a href="../index.html" class="button">
                  Back to Home <i class="ri-arrow-right-line"></i>
               </a>
            </div>
@@ -116,15 +116,15 @@
 
                 <ul class="footer__links">
                    <li>
-                      <a href="Pages/Atlas.html" class="footer__link">Atlas</a>
+                      <a href="Atlas.html" class="footer__link">Atlas</a>
                    </li>
 
                    <li>
-                      <a href="Pages/Bonnie.html" class="footer__link">Bonnie</a>
+                      <a href="Bonnie.html" class="footer__link">Bonnie</a>
                    </li>
                    
                    <li>
-                      <a href="Pages/Mia.html" class="footer__link">Mia</a>
+                      <a href="Mia.html" class="footer__link">Mia</a>
                    </li>
                 </ul>
              </div>
@@ -152,7 +152,7 @@
 
                 <ul class="footer__links">
                    <li>
-                      <a href="Pages/Ann.html" class="footer__link">Ann</a>
+                      <a href="Ann.html" class="footer__link">Ann</a>
                    </li>
 
                    <li>
@@ -202,6 +202,6 @@
  </a>
 
 <!-- JAVASCRIPT LÄNK -->
- <script src="JavaScript/myScript.js"></script>
+ <script src="../JavaScript/myScript.js"></script>
 </body>
 </html>
