added last images

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                </div>
 
                <div class="pack__image">
-                  <img src="Styling/Images/noPicture.jpg" alt="pack image" class="pack__img">
+                  <img src="Styling/Images/pack.jpg" alt="pack image" class="pack__img">
                   <div class="pack__shadow"></div>
                </div>
             </div>
@@ -164,7 +164,7 @@
 
                <article class="traits__card">
                   <div class="traits__image">
-                     <img src="Styling/Images/noPicture.jpg" alt="traits image" class="traits__img">
+                     <img src="Styling/Images/Mia2.jpg" alt="traits image" class="traits__img">
                      <div class="traits__shadow"></div>
                   </div>
                   <h2 class="traits__title">Mia</h2>
@@ -319,9 +319,6 @@
       <a href="#" class="scrollup" id="scroll-up">
          <i class="ri-arrow-up-line"></i>
       </a>
-
-      <!--=============== SCROLLREVEAL ===============-->
-      <script src="assets/js/scrollreveal.min.js"></script>
 
 <!-- JAVASCRIPT LÄNK -->
       <script src="JavaScript/myScript.js"></script>
