--- a/Pages/Ann.html
+++ b/Pages/Ann.html
@@ -78,7 +78,7 @@
              amazing friends of mine.
           </p>
 
-          <a href="index.html" class="button">
+          <a href="../index.html" class="button">
              Back <i class="ri-arrow-right-line"></i>
           </a>
        </div>
