--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 <!-- FOOTER - SLUT -->
 
 
-<!-- SCROLL UP ICON (IMPORTERAD FRN REMIXICONS) -->
+<!-- SCROLL UP ICON (IMPORTERAD FRÅN REMIXICONS) -->
       <a href="#" class="scrollup" id="scroll-up">
          <i class="ri-arrow-up-line"></i>
       </a>
