fixed pavicon on all pages

--- a/Pages/Atlas.html
+++ b/Pages/Atlas.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
       <!--FAVICON, TASS FRAMFÖR TAB NAMNET-->
-      <link rel="shortcut icon" href="Styling/Images/paw-favicon.png">
+      <link rel="shortcut icon" href="../Styling/Images/paw-favicon.png">
 
       <!-- IMPORTERADE REMIXICONS, EX FÖR PILAR-->
       <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
